--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,78 @@
+@font-face {
+  font-family: 'MyRoboto';
+  src: url(../fonts/BebasNeue-Regular.ttf); }
+
 body {
-  background-color: red; }
+  padding: 0px;
+  margin: 0px; }
+  body h1 {
+    margin-top: 0pt;
+    margin-bottom: 0pt;
+    padding-left: 0pt;
+    padding-right: 0pt; }
+
+::placeholder {
+  color: blackc;
+  font-size: 1.2em; }
+
+.pagesBody {
+  max-width: 1100px;
+  margin: 0 auto; }
+
+.header {
+  padding-top: 0;
+  position: relative;
+  height: 100vh;
+  width: 100%; }
+  .header_main a img {
+    height: 80px; }
+  .header_main__nav {
+    font-size: 30px;
+    float: right; }
+    .header_main__nav__formargin {
+      margin-top: 40px; }
+    .header_main__nav span {
+      padding-left: 40px;
+      color: black; }
+    .header_main__nav a {
+      text-decoration: none; }
+    .header_main__nav a:hover {
+      text-decoration: underline; }
+  .header_main__screen {
+    position: absolute;
+    margin-top: 15%;
+    color: white;
+    display: flex;
+    flex-direction: row; }
+    .header_main__screen__left {
+      width: 600px; }
+      .header_main__screen__left img {
+        width: 500px; }
+    .header_main__screen__right {
+      width: 400px;
+      height: 500px;
+      margin-left: 100px;
+      display: flex;
+      color: white;
+      flex-direction: column; }
+      .header_main__screen__right input:nth-child(1) {
+        margin-top: 30px; }
+      .header_main__screen__right input {
+        width: 90%;
+        margin: 10px auto;
+        height: 40px;
+        border: none;
+        border-bottom: 2px solid #7c7c7c;
+        background-color: transparent;
+        outline: none;
+        font-size: 1.5em; }
+      .header_main__screen__right textarea {
+        width: 90.5%;
+        margin: 10px auto;
+        resize: vertical;
+        font-size: 1.2em; }
+      .header_main__screen__right button {
+        width: 92%;
+        margin: 10px auto;
+        height: 40px;
+        font-size: 1.2em; }
