--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,101 @@
+@font-face{
+    font-family: 'MyRoboto';
+    src: url(../fonts/BebasNeue-Regular.ttf);
+}
+
+
 body{
-    background-color: red;
+    padding: 0px;
+    margin: 0px;
+    h1 {
+        margin-top: 0pt;
+        margin-bottom: 0pt;
+        padding-left: 0pt;
+        padding-right: 0pt;
+    }
+}
+::placeholder {
+    color:blackc;
+    font-size: 1.2em;
+  }
+.pagesBody{
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.header{
+    padding-top: 0;
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    &_main{
+        a{
+            img{
+                height: 80px;
+            }
+        }
+        &__nav{
+            &__formargin{
+                margin-top: 40px;
+            }
+            font-size: 30px;
+            float: right;
+            span{
+                padding-left: 40px;
+                color: black;
+            }
+            a{
+                text-decoration: none;
+            }
+            a:hover {
+                text-decoration: underline;
+            }
+        }
+        &__screen{
+            position: absolute;
+            margin-top: 15%;
+            color: white;
+            display: flex;
+            flex-direction: row;
+            &__left{
+                width: 600px;
+                img{
+                    width: 500px;
+                }
+            }
+            &__right{
+                width: 400px;
+                height: 500px;
+                margin-left: 100px;
+                display: flex;
+                color: white;
+                flex-direction: column;
+                input:nth-child(1){
+                    margin-top: 30px;
+                }
+                input{
+                    width: 90%;
+                    margin: 10px auto;
+                    height: 40px;
+                    border: none;
+                    border-bottom: 2px solid rgb(124, 124, 124);
+                    background-color: transparent;
+                    outline: none;
+                    font-size: 1.5em;
+                }
+                textarea{
+                    width: 90.5%;
+                    margin: 10px auto;
+                    resize: vertical;
+                    font-size: 1.2em;
+                }
+                button{
+                    width: 92%;
+                    margin: 10px auto;
+                    height: 40px;
+                    font-size: 1.2em;
+                }
+            }
+        }
+    }   
 }
