--- a/scss/style.scss
+++ b/scss/style.scss
@@ -245,3 +245,15 @@ body{
         text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
     }
 }
+
+
+.maps{
+    text-align: center;
+    &_flex{
+        display: flex;
+        flex-direction: row;
+    }
+    H2{
+        font-size: 45px;
+    }
+}
