--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Mukta:700");
 @font-face {
   font-family: 'MyRoboto';
   src: url(../fonts/BebasNeue-Regular.ttf); }
+
+* {
+  box-sizing: border-box; }
+  *::before, *::after {
+    box-sizing: border-box; }
 
 body {
   padding: 0px;
@@ -87,29 +93,122 @@ body {
 
 .about_flex {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr; }
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: 50px auto 50px auto; }
   .about_flex div {
     width: 300px;
-    height: 400px;
-    background-color: #f5d269;
-    margin: 30px; }
+    height: 95%;
+    background-color: #fffdf8;
+    margin: 30px;
+    position: relative;
+    border-bottom: 5px solid #5555f0; }
+    .about_flex div img {
+      width: 300px; }
+    .about_flex div h3 {
+      text-align: center; }
+    .about_flex div p {
+      padding: 10px; }
+    .about_flex div button {
+      position: relative;
+      display: inline-block;
+      cursor: pointer;
+      outline: none;
+      border: 0;
+      vertical-align: middle;
+      text-decoration: none;
+      background: transparent;
+      padding: 0;
+      font-size: inherit;
+      font-family: inherit; }
+      .about_flex div button.learn-more {
+        width: 12rem;
+        height: auto;
+        margin-left: 50px;
+        margin-bottom: 10px; }
+        .about_flex div button.learn-more .circle {
+          transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+          position: relative;
+          display: block;
+          margin: 0;
+          width: 3rem;
+          height: 3rem;
+          background: #282936;
+          border-radius: 1.625rem; }
+          .about_flex div button.learn-more .circle .icon {
+            transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+            background: #fff; }
+            .about_flex div button.learn-more .circle .icon.arrow {
+              transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+              left: 0.625rem;
+              width: 1.125rem;
+              height: 0.125rem;
+              background: none; }
+              .about_flex div button.learn-more .circle .icon.arrow::before {
+                position: absolute;
+                content: '';
+                top: -0.25rem;
+                right: 0.0625rem;
+                width: 0.625rem;
+                height: 0.625rem;
+                border-top: 0.125rem solid #fff;
+                border-right: 0.125rem solid #fff;
+                transform: rotate(45deg); }
+        .about_flex div button.learn-more .button-text {
+          transition: all 0.45s cubic-bezier(0.65, 0, 0.076, 1);
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          padding: 0.75rem 0;
+          margin: 0 0 0 1.85rem;
+          color: #282936;
+          font-weight: 700;
+          line-height: 1.6;
+          text-align: center;
+          text-transform: uppercase; }
+      .about_flex div button:hover .circle {
+        width: 100%; }
+        .about_flex div button:hover .circle .icon.arrow {
+          background: #fff;
+          transform: translate(1rem, 0); }
+      .about_flex div button:hover .button-text {
+        color: #fff; }
+  .about_flex div:hover {
+    -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75); }
 
-.typeWork h2 {
-  text-align: center;
-  font-size: 45px; }
-
-.typeWork_flex {
-  display: flex;
-  flex-direction: row; }
-  .typeWork_flex div {
-    width: 400px;
-    height: 450px;
-    background-color: #ffc04a;
-    margin: 30px; }
+.typeWork {
+  margin-top: 150px; }
+  .typeWork h2 {
+    text-align: center;
+    font-size: 45px; }
+  .typeWork_flex {
+    display: flex;
+    flex-direction: row; }
+    .typeWork_flex div {
+      width: 400px;
+      height: 450px;
+      margin: 30px;
+      position: relative;
+      text-align: center; }
+      .typeWork_flex div img {
+        width: 200px;
+        margin-left: 50%;
+        transform: translate(-50%, 0); }
+    .typeWork_flex div:hover {
+      -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
+      box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75); }
 
 .ac-container {
   width: 1000px;
-  margin: 40px auto; }
+  margin: 200px auto 0 auto; }
   .ac-container h2 {
     text-align: center;
     font-size: 45px; }
@@ -182,10 +281,16 @@ body {
     padding: 20px;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8); }
 
-.maps {
-  text-align: center; }
-  .maps_flex {
+.contact {
+  text-align: center;
+  margin-top: 150px; }
+  .contact_flex {
     display: flex;
     flex-direction: row; }
-  .maps H2 {
+  .contact H2 {
     font-size: 45px; }
+
+.footer {
+  height: 300px;
+  margin-top: 50px;
+  background-color: #282936; }
