--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,6 @@ body {
     flex-direction: row; }
     .typeWork_flex div {
       width: 400px;
-      height: 450px;
       margin: 30px;
       position: relative;
       text-align: center; }
@@ -201,6 +200,9 @@ body {
         width: 200px;
         margin-left: 50%;
         transform: translate(-50%, 0); }
+      .typeWork_flex div h3 {
+        font-size: 26px;
+        font-weight: 900; }
     .typeWork_flex div:hover {
       -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
       -moz-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
@@ -287,6 +289,35 @@ body {
   .contact_flex {
     display: flex;
     flex-direction: row; }
+    .contact_flex__rightSide__form {
+      width: 400px;
+      height: 500px;
+      margin-left: 100px;
+      display: flex;
+      color: white;
+      flex-direction: column; }
+      .contact_flex__rightSide__form input:nth-child(1) {
+        margin-top: 30px; }
+      .contact_flex__rightSide__form input {
+        width: 90%;
+        margin: 10px auto;
+        height: 20px;
+        border: none;
+        border-bottom: 2px solid #7c7c7c;
+        background-color: transparent;
+        outline: none;
+        font-size: 1.1em; }
+      .contact_flex__rightSide__form textarea {
+        width: 90.5%;
+        height: 250px;
+        margin: 10px auto;
+        resize: vertical;
+        font-size: 1.2em; }
+      .contact_flex__rightSide__form button {
+        width: 92%;
+        margin: 10px auto;
+        height: 40px;
+        font-size: 1.2em; }
   .contact H2 {
     font-size: 45px; }
 
