--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Mukta:700");
 @font-face {
-  font-family: 'MyRoboto';
-  src: url(../fonts/BebasNeue-Regular.ttf); }
+  font-family: 'RussoOne';
+  src: url(../fonts/RussoOne-Regular.ttf); }
 
 * {
   box-sizing: border-box; }
@@ -11,15 +11,22 @@
 body {
   padding: 0px;
   margin: 0px; }
-  body h1 {
+  body h1, body h2, body h3 {
     margin-top: 0pt;
-    margin-bottom: 0pt;
     padding-left: 0pt;
-    padding-right: 0pt; }
+    padding-right: 0pt;
+    font-family: 'RussoOne'; }
+  body p {
+    font-family: 'RussoOne'; }
+  body span {
+    font-family: 'RussoOne'; }
+  body button {
+    font-family: 'RussoOne'; }
 
 ::placeholder {
   color: blackc;
-  font-size: 1.2em; }
+  font-size: 1.2em;
+  font-family: 'RussoOne'; }
 
 .pagesBody {
   max-width: 1100px;
