--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 @font-face{
-    font-family: 'MyRoboto';
-    src: url(../fonts/BebasNeue-Regular.ttf);
+    font-family: 'RussoOne';
+    src: url(../fonts/RussoOne-Regular.ttf);
 }
 @import url('https://fonts.googleapis.com/css?family=Mukta:700');
 
@@ -22,16 +22,27 @@ $black: #282936;
 body{
     padding: 0px;
     margin: 0px;
-    h1 {
+    h1, h2, h3 {
         margin-top: 0pt;
-        margin-bottom: 0pt;
         padding-left: 0pt;
         padding-right: 0pt;
+        font-family: 'RussoOne';
     }
+    p{
+        font-family: 'RussoOne';
+    }
+    span{
+        font-family: 'RussoOne';
+    }
+    button{
+        font-family: 'RussoOne';
+    }
+    
 }
 ::placeholder {
     color:blackc;
     font-size: 1.2em;
+    font-family: 'RussoOne';
   }
 .pagesBody{
     max-width: 1100px;
@@ -49,8 +60,7 @@ body{
     h1{
         text-align: center;
         font-size: 50px;
-        margin-top: 50px;
-    }
+        margin-top: 50px;    }
     &_main{
         a{
             img{
