--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,17 @@
 body {
   padding: 0px;
   margin: 0px; }
-  body h1, body h2, body h3 {
+  body input[type~="text"], body input[type~="password"], body input[type~="select"], body textarea[type~="select"] {
+    font-family: 'RussoOne'; }
+  body article, body label {
+    font-family: 'RussoOne'; }
+  body h1, body h2, body h3, body h4 {
     margin-top: 0pt;
     padding-left: 0pt;
     padding-right: 0pt;
     font-family: 'RussoOne'; }
+  body h4 {
+    margin-bottom: 10px; }
   body p {
     font-family: 'RussoOne'; }
   body span {
@@ -44,12 +50,12 @@ body {
   .header_main a img {
     height: 80px; }
   .header_main__nav {
-    font-size: 30px;
+    font-size: 25px;
     float: right; }
     .header_main__nav__formargin {
       margin-top: 40px; }
     .header_main__nav span {
-      padding-left: 40px;
+      padding-left: 30px;
       color: black; }
     .header_main__nav a {
       text-decoration: none; }
@@ -327,4 +333,17 @@ body {
 .footer {
   height: 300px;
   margin-top: 50px;
-  background-color: #282936; }
+  background-color: #282936;
+  text-align: center; }
+  .footer_info {
+    margin-top: 30px;
+    margin-bottom: 20px;
+    color: #dadada;
+    font-size: 30px; }
+    .footer_info img {
+      width: 30px; }
+  .footer_copywrite {
+    color: #dadada;
+    text-align: center; }
+    .footer_copywrite p {
+      line-height: .5; }
