--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ body {
     padding-right: 0pt;
     font-family: 'RussoOne'; }
   body h4 {
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    font-weight: 500; }
   body p {
     font-family: 'RussoOne'; }
   body span {
@@ -331,7 +332,7 @@ body {
     font-size: 45px; }
 
 .footer {
-  height: 300px;
+  height: 260px;
   margin-top: 50px;
   background-color: #282936;
   text-align: center; }
