--- a/scss/style.scss
+++ b/scss/style.scss
@@ -36,6 +36,7 @@ body{
     }
     h4{
         margin-bottom: 10px;
+        font-weight: 500;
     }
     p{
         font-family: 'RussoOne';
@@ -442,7 +443,7 @@ body{
 
 
 .footer{
-    height: 300px;
+    height: 260px;
     margin-top: 50px;
     background-color: #282936;
     text-align: center;
