--- a/css/style.css
+++ b/css/style.css
@@ -230,12 +230,12 @@ body {
     position: relative;
     z-index: 20;
     display: block;
-    height: 30px;
+    height: 50px;
     cursor: pointer;
-    color: #777;
+    color: #444444;
     text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
     line-height: 33px;
-    font-size: 19px;
+    font-size: 25px;
     background: -moz-linear-gradient(top, #ffffff 1%, #eaeaea 100%);
     background: -webkit-gradient(linear, left top, left bottom, color-stop(1%, #ffffff), color-stop(100%, #eaeaea));
     background: -webkit-linear-gradient(top, #ffffff 1%, #eaeaea 100%);
@@ -245,11 +245,11 @@ body {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#eaeaea',GradientType=0 );
     box-shadow: 0px 0px 0px 1px rgba(155, 155, 155, 0.3), 1px 0px 0px 0px rgba(255, 255, 255, 0.9) inset, 0px 2px 2px rgba(0, 0, 0, 0.1); }
   .ac-container label:hover {
-    background: #fff; }
+    background: #f0ecec; }
   .ac-container input:checked + label,
   .ac-container input:checked + label:hover {
-    background: #c6e1ec;
-    color: #3d7489;
+    background: #b6f0f0;
+    color: #1c1e1f;
     text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.6);
     box-shadow: 0px 0px 0px 1px rgba(155, 155, 155, 0.3), 0px 2px 2px rgba(0, 0, 0, 0.1); }
   .ac-container label:hover:after,
@@ -284,7 +284,7 @@ body {
     -ms-transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
     transition: height 0.3s ease-in-out, box-shadow 0.6s linear;
     box-shadow: 0px 0px 0px 1px rgba(155, 155, 155, 0.3);
-    height: 100px; }
+    height: 250px; }
   .ac-container article p {
     font-style: italic;
     color: #777;
