--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,36 @@ body {
   .header h1 {
     text-align: center;
     font-size: 50px;
-    margin-top: 50px; }
+    margin-top: 150px; }
+  .header_main .flex {
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    width: 1100px;
+    position: fixed;
+    top: 0;
+    background-color: #fff;
+    z-index: 1000; }
   .header_main a img {
     height: 80px; }
+  .header_main_tel {
+    display: flex;
+    flex-direction: row; }
+    .header_main_tel_flex {
+      margin-left: 20px; }
+      .header_main_tel_flex p {
+        letter-spacing: .3px; }
+      .header_main_tel_flex_grid {
+        display: grid;
+        grid-template-columns: 40px 1fr;
+        height: 33px; }
+        .header_main_tel_flex_grid img {
+          margin-top: 8px;
+          width: 30px; }
   .header_main__nav {
-    font-size: 25px;
-    float: right; }
+    font-size: 25px; }
     .header_main__nav__formargin {
-      margin-top: 40px; }
+      margin-top: 40px;
+      float: right; }
     .header_main__nav span {
       padding-left: 30px;
       color: black; }
@@ -64,7 +86,7 @@ body {
       text-decoration: underline; }
   .header_main__screen {
     position: absolute;
-    margin-top: 12%;
+    margin-top: 180px;
     color: white;
     display: flex;
     flex-direction: row; }
