--- a/scss/style.scss
+++ b/scss/style.scss
@@ -70,19 +70,48 @@ body{
     h1{
         text-align: center;
         font-size: 50px;
-        margin-top: 50px;    }
+        margin-top: 150px;  
+    }
     &_main{
+        .flex{
+            display: grid;
+            grid-template-columns: 300px 1fr;
+            width: 1100px;
+            position: fixed;
+            top: 0;
+            background-color: #fff;
+            z-index: 1000;
+        }
         a{
             img{
                 height: 80px;
             }
         }
+        &_tel{
+            display: flex;
+            flex-direction: row;
+            &_flex{
+                margin-left: 20px;
+                p{  
+                    letter-spacing: .3px;
+                }
+                &_grid{
+                    display: grid;
+                    grid-template-columns: 40px 1fr;
+                    height: 33px;
+                    img{
+                        margin-top: 8px;
+                        width: 30px;
+                    }
+                }
+            }
+        }
         &__nav{
             &__formargin{
                 margin-top: 40px;
+                float: right;
             }
             font-size: 25px;
-            float: right;
             span{
                 padding-left: 30px;
                 color: black;
@@ -96,7 +125,7 @@ body{
         }
         &__screen{
             position: absolute;
-            margin-top: 12%;
+            margin-top: 180px;
             color: white;
             display: flex;
             flex-direction: row;
